--- a/Portfolio/CSS/menu.css
+++ b/Portfolio/CSS/menu.css
@@ -1,17 +1,30 @@
+/*se trabaja el menu, practicamente el header*/
 header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: sticky;
+	top: 0;
+	bottom: 0;
 }
 h1{
 	font-family: 'Montserrat', sans-serif;
 }
 .encabezado{
+	margin: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
+nav{
+	margin: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 30px;
+}
 a{
 	text-decoration: none;
 	color: black;
+	cursor: pointer;
 }
